--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>World Cup ⚽ 🏆 Scores</title>
+    <title>FIFA World Cup ⚽ 🏆 Scores</title>
     <meta
       name="description"
       content="A Vue App that shows the stats of Upcoming World Cup 2022 Matches"
